manifests/vertexai/vertexai-internal-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vertexai-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "vertexai.<internal-dns-name>"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vertexai-virtual-service
spec:
  hosts:
  - "vertexai.<internal-dns-name>"
  gateways:
  - vertexai-gateway
  http:
  - match:
    - uri:
        regex: /languages/?(.*)
    route:
    - destination:
        host: translateapp-svc
        port:
          number: 80
  - match:  
    - uri:
        regex: /translate/?(.*)
    route:
    - destination:
        host: translateapp-svc
        port:
          number: 80
  - match:  
    - uri:
        regex: /action/text/?(.*)
    route:
    - destination:
        host: retailgenieapp-svc
        port:
          number: 80
  - match:  
    - uri:
        regex: /product/?(.*)
    route:
    - destination:
        host: retailgenieapp-svc
        port:
          number: 80
  - match:  
    - uri:
        regex: /text/?(.*)
    route:
    - destination:
        host: retailgenieapp-svc
        port:
          number: 80
  - match:
    - uri:
        regex: /image/?(.*)
    route:
    - destination:
        host: retailgenieapp-svc
        port:
          number: 80
